--- a/views/logins.ejs
+++ b/views/logins.ejs
@@ -9,7 +9,7 @@
                 <% theLogins.forEach(login => { %>
                     <b><%= login.username %></b>
                     <a href="/logins/<%=login.
-                    _id%>/edit?username=<%=login.username%>">edit</a>
+                    _id%>/edit?username=<%=login.username%>&email=<%=login.email%>">edit</a>
                     <a href="/logins/<%=login._id%>/delete?username=<%=login.username%>">delete</a></br> 
                     <% }) %>
             <% } %>
@@ -19,6 +19,9 @@
             </label>
             <label>Password:
                 <input type="password" id="password" name="password" value="<%= locals.password %>" required>
+            </label>
+            <label>Email:
+                <input type="email" id="emal" name="email" value="<%= locals.email %>" required>
             </label>
             </br>
             <button>POST</button>
